# APDOCC

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  combinations.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  run-tests.yml
scripts/: hello_world.py
src/apdocc/: __init__.py  colors.json  io.py  models.py  rich_view.py  svg_export.py
src/apdocc/utils/: config.py  logger.py
tests/: __init__.py  test_true.py
