[project]
name = "apdocc"
version = "0.2.0"
description = "A Python Dictionary of Color Combinations"
authors = [
    { name = "Thomas Camminady", email = "0milieux_member@icloud.com" }
]
readme = "README.md"
repository = "https://github.com/thomascamminady/apdocc"
homepage = "https://github.com/thomascamminady/apdocc"
documentation = "https://thomascamminady.github.io/apdocc"
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
lint.ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D401",
    "E501",
]
lint.select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]
line-length = 80
exclude = [
  # VCS metadata
  ".git",
  ".github",

  # Virtual-envs & caches
  ".venv",
  "__pycache__",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",

  # Docs, data & notebooks
  "docs/**",

  # Non-Python files
  "*.md",
  "*.toml",
  "*.yaml",
  "*.yml",
  "*.html",
  "*.json",

  # Python bytecode
  "*.pyc",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = [
    "D200",
    "D400",
]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]
